<resources>
    <string name="app_name">Money</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_statements">StatementsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">Test</string>
    <string name="home">Home</string>
    <string name="statements">Movimentações</string>
    <string name="accounts">Contas</string>
    <string name="categories">Categorias</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_label">No account yet? Create one</string>
    <string name="please_input_email_and_password">Por favor insira seu login e senha.</string>
    <string name="action_logout">Logout</string>
    <string name="sign_out_successful">Logout efetuado com sucesso.</string>
    <string name="statement_from_to">»</string>
    <string name="spendings">Despesas</string>
    <string name="incomes">Receitas</string>
    <string name="currency_value">R$ %s</string>
    <string name="invalid_username_or_password">Usuário ou senha inválidos</string>
    <string name="add_statement">Adicionar Movimentação</string>
    <string name="income">Receita</string>
    <string name="spending">Despesa</string>
    <string name="transfer">Transferência</string>
    <string name="close">Fechar</string>
    <string name="value">Valor</string>
    <string name="account">Conta</string>
    <string name="category">Categoria</string>
    <string name="name">Nome</string>
    <string name="date">Data</string>
    <string name="action_save">Salvar</string>
    <string name="new_income">Nova Receita</string>
    <string name="new_spending">Nova Despesa</string>
    <string name="delete">Excluir</string>
    <string name="edit">Editar</string>
    <string name="delete_statement">Excluir movimentação?</string>
    <string name="cancel">Cancelar</string>
    <string name="income_deleted">Receita excluída</string>
    <string name="spending_deleted">Despesa excluída</string>
    <string name="loading">Carregando...</string>
</resources>
