<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/add_statement" android:text="@string/add_statement"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:text="@string/income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/income"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:text="@string/spending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spending"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:text="@string/transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transfer"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:textAlignment="textEnd"
        android:textColor="?android:attr/textColorPrimary" />
</LinearLayout>
