<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <TextView
        android:id="@+id/add_statement" android:text="@string/delete_statement"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_weight="1" />

        <Button
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
